--- a/Landing_Page/LandingPage.html
+++ b/Landing_Page/LandingPage.html
@@ -29,7 +29,7 @@
                     <div class="blue1 blob"></div>
                 </div>
               <h4>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque at quae ducimus. Suscipit omnis quibusdam non cum rem voluptatem! 
+                At StayHealthy, we have always made lifelong health our top priority. We continually consider how to support the overall health of every patient that walks through our door.
               </h4>
               <a href="#services">
                 <button class="button">Get Started</button>
