--- a/Landing_Page/LandingPage.html
+++ b/Landing_Page/LandingPage.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="./LandingPage.css">
 </head>
 <body>
+
+
+    <!-- Navbar using iframe -->
+    <iframe src="../Navbar/Navbar.html" width="100%" height="80px" style="border: none;"></iframe>
+
     <section class="hero-section">
         <div>
           <div data-aos="fade-up" class="flex-hero">
